# termal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  test  testfile
ansi_codes/: Cargo.toml
ansi_codes/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs
examples/: chars.rs  feature.rs  hints.rs  img256.data  img2_256.data  img3_256.data  keys.rs  main.rs  print.rs  progress.rs  reader.rs  requests.rs  sixel.rs  texel.rs
examples/features/: codes.rs  image.rs  mod.rs  raw.rs
examples/features/raw/: mod.rs  request.rs  terminal.rs
src/: codes.rs  lib.rs
termal_codes/: Cargo.toml
termal_codes/src/: lib.rs
termal_core/: Cargo.toml
termal_core/src/: codes.rs  err.rs  error.rs  lib.rs  proc.rs  rgb.rs  sixel.rs
termal_core/src/image/: img_nearest.rs  mat.rs  mod.rs  raw_img.rs  rect.rs  rgb.rs
termal_core/src/image/sixel/: mod.rs  sixel_state.rs
termal_core/src/image/texel/: mod.rs  texel_state.rs
termal_core/src/proc/: err.rs  mod.rs
termal_core/src/progress/: bar.rs  bar_theme.rs  dots.rs  iter.rs  mod.rs  no_state.rs  progress_ext.rs  progress_formatter.rs  state_progress.rs  update_policy.rs
termal_core/src/raw/: io_provider.rs  key_code.rs  mod.rs  readers.rs  request.rs  stdio_provider.rs  terminal.rs  wait_for_event.rs  wait_for_in.rs
termal_core/src/raw/events/: csi.rs  event.rs  key.rs  mod.rs  mouse.rs  osc.rs  state_change.rs  status.rs  term_attr.rs  terminal.rs
termal_core/src/raw/readers/: mod.rs  predicate.rs  read_conf.rs  term_read.rs  vec2.rs
termal_core/src/raw/sys/: mod.rs  unix.rs  windows.rs
termal_core/src/sixel/: mat.rs  mod.rs  raw_img.rs  rgb.rs  sixel_image.rs  sixel_state.rs
termal_core/src/term_text/: mod.rs  term_text_metadata.rs  term_text_span.rs  term_text_spans.rs
termal_core/src/texel/: mod.rs  texel_state.rs
termal_macros/: Cargo.toml
termal_macros/src/: lib.rs
termal_proc/: Cargo.toml
termal_proc/src/: lib.rs
tests/: base.rs  codes.rs  events.rs  term_text.rs  terminal.rs
tests/common/: mod.rs
