[package]
name = "termal"
version = "1.2.2"
edition = "2021"
license-file = "LICENSE"
description = "Rust library for fancy colored cli using ansi codes"
homepage = "https://github.com/BonnyAD9/termal"
repository = "https://github.com/BonnyAD9/termal"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "termal_core",
    "termal_proc"
]

[dependencies]
termal_core = { path = "termal_core", version = "1.1.0", default-features = false }
termal_proc = { path = "termal_proc", version = "1.1.0", default-features = false }

[features]
default = ["raw"]
all = ["image", "raw", "term_text"]
term_image = ["termal_core/term_image"]
image = ["termal_core/image"]
raw = ["termal_core/raw"]
term_text = ["termal_core/term_text"]

[[example]]
name = "sixel"
required_features = ["term_image"]

[[example]]
name = "texel"
required_features = ["term_image"]
