[package]
name = "termal"
version = "4.0.0"
edition = "2024"
license-file = "LICENSE"
description = "Rust library for fancy colored cli using ansi codes"
homepage = "https://github.com/BonnyAD9/termal"
repository = "https://github.com/BonnyAD9/termal"
readme = "README.md"

[workspace]
members = [
    "termal_core",
    "termal_proc"
]

[dependencies.termal_core]
path = "termal_core"
version = "4.0.0"
default-features = false

[dependencies.termal_proc]
path = "termal_proc"
version = "4.0.0"
default-features = false

[features]
default = []
all = ["termal_core/all"]
term_image = ["termal_core/term_image"]
image = ["termal_core/image"]
raw = ["termal_core/raw"]
events = ["termal_core/events"]
term_text = ["termal_core/term_text"]
readers = ["termal_core/readers"]

[package.metadata."docs.rs"]
all-features = true
