[package]
name = "termal_core"
version = "4.0.0"
edition = "2024"
license-file = "../LICENSE"
description = "This library contains implementation for the termal library"
homepage = "https://github.com/BonnyAD9/termal"
repository = "https://github.com/BonnyAD9/termal"
readme = "../README.md"

[features]
default = ["all"]
all = ["term_image", "image", "raw", "term_text", "proc", "readers", "events"]
term_image = []
image = ["dep:image", "term_image"]
raw = ["dep:bitflags", "dep:libc", "dep:winapi"]
events = ["raw"]
term_text = []
proc = ["dep:litrs", "dep:proc-macro2"]
readers = ["raw", "term_text", "events"]

[dependencies]
image =  { version = "0.25.6", optional = true }
litrs = { version = "0.4.1", optional = true }
place_macro = "1.0.0"
proc-macro2 = { version = "1.0.95", optional = true }
thiserror = "2.0.12"
bitflags = { version = "2.9.1", optional = true }
base64 = "0.22.1"
minlin = "0.3.1"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
    "winnt", "handleapi", "fileapi", "consoleapi", "processenv", "winbase",
    "winuser", "winerror"
]
optional = true
