[package]
name = "termal_core"
version = "4.2.1"
edition = "2024"
license-file = "../LICENSE"
description = "This library contains implementation for the termal library"
homepage = "https://github.com/BonnyAD9/termal"
repository = "https://github.com/BonnyAD9/termal"
readme = "../README.md"

[features]
default = ["all"]
all = ["term_image", "image", "raw", "term_text", "proc", "readers", "events", "progress"]
term_image = []
image = ["dep:image", "term_image"]
raw = ["dep:bitflags", "dep:libc", "dep:winapi"]
events = ["raw"]
term_text = ["dep:unicode-width"]
proc = ["dep:litrs", "dep:proc-macro2"]
readers = ["raw", "term_text", "events"]
progress = []

[dependencies]
image =  { version = "0.25.10", optional = true }
litrs = { version = "1.0.0", features = ["proc-macro2"], optional = true }
place_macro = "1.1.0"
proc-macro2 = { version = "1.0.106", optional = true }
thiserror = "2.0.18"
bitflags = { version = "2.11.0", optional = true }
base64 = "0.22.1"
minlin = "0.5.0"
unicode-width = { version = "0.2.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.186", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
    "winnt", "handleapi", "fileapi", "consoleapi", "processenv", "winbase",
    "winuser", "winerror"
]
optional = true
