[package]
name = "termal_macros"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
description = "Macros for the termal library"
homepage = "https://github.com/BonnyAD9/termal"
repository = "https://github.com/BonnyAD9/termal"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
termal_codes = { path = "../termal_codes", version = "0.1.0"}
litrs = "0.4"
