[package]
name = "termal_proc"
version = "2.1.2"
edition = "2024"
license-file = "../LICENSE"
description = "Rust library for fancy colored cli using ansi codes"
homepage = "https://github.com/BonnyAD9/termal"
repository = "https://github.com/BonnyAD9/termal"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies.termal_core]
path = "../termal_core"
version = "2.1.2"
default-features = false
features = ["proc"]
